--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@
   align-content: space-between;
 }
 .navi{
+  
+  z-index: 999;
   margin: auto;
   height: 40px;
   width: 100%;
@@ -40,13 +42,21 @@
   background-color: red;
   color: white;
 }
-
+.box-one{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: space-around;
+  align-items: center;
+}
 .serverone{
   overflow: hidden;
   height: 20%;
   width: 80%;
   border-style: groove;
-  margin-top: 10rem;
+  margin-top: 2.6rem;
   background-color: transparent;
   display: flex;
   flex-direction: column;
@@ -55,7 +65,7 @@
 }
 .botton{
   border-radius: 10px;
-  margin-top:1rem;
+  margin-top:rem;
   margin-bottom: 1rem;
   margin-left: auto;
   margin-right: auto;
@@ -66,6 +76,7 @@
   box-shadow: 0 5px 0 #105cad;
   color: white;
   text-decoration: none;
+  padding-top: 10px;
   display: inline-block;
   text-align: center;
   font-size: 20px;
@@ -73,13 +84,14 @@
 
 
 .footer{
+  padding-left: 1rem;
+  padding-right: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: botton;
   border-radius: 10px;
   border-style: double;
   border-color: red;
-  margin-top: 11rem;
   background-color:blue;
   height: 2.5rem;
   width: 100%vw;
