--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .whole{
   background-color: #999999;
   width: 100%;
-  height: 100%;
+  height: 100%vh;
   display: flex;
   flex-direction: column;
   align-items: center;
